[gd_scene load_steps=12 format=3 uid="uid://chxk2la05rssi"]

[ext_resource type="FontFile" uid="uid://b48n1o88y7scp" path="res://assets/font/MotionControl-Bold.otf" id="1_3n68s"]
[ext_resource type="Script" path="res://script/menu.gd" id="1_ehdk3"]
[ext_resource type="Texture2D" uid="uid://bw4kqunasftnp" path="res://assets/image/background/MainMenu.jpg" id="2_4gxro"]
[ext_resource type="Script" path="res://script/bgmmenu.gd" id="4_rqou5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8j5xq"]
texture = ExtResource("2_4gxro")
modulate_color = Color(0.617455, 0.617455, 0.617455, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t4y4i"]
bg_color = Color(0.11538, 0.232471, 0.189401, 1)
shadow_size = 7
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofhvd"]
bg_color = Color(0.0727041, 0.161065, 0.128596, 1)
shadow_size = 7
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i8d61"]
bg_color = Color(0.316399, 0.348518, 0.188821, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ix1p"]
bg_color = Color(0.170082, 0.187718, 0.0903248, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2npeq"]
bg_color = Color(0.325302, 0.181318, 0.102652, 1)
shadow_size = 7
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2f4n5"]
bg_color = Color(0.212734, 0.111002, 0.0553622, 1)
shadow_size = 7
shadow_offset = Vector2(5, 5)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ehdk3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8j5xq")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 75.0
offset_top = 60.0
offset_right = 386.0
offset_bottom = 265.0
theme_override_colors/font_shadow_color = Color(0.494245, 1.40181e-06, 2.40654e-07, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("1_3n68s")
theme_override_font_sizes/font_size = 100
text = "Nightfall
Soldier"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.217
anchor_top = 0.629
anchor_right = 0.217
anchor_bottom = 0.629
offset_left = -175.984
offset_top = -88.592
offset_right = 185.016
offset_bottom = 189.408
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_3n68s")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxFlat_t4y4i")
theme_override_styles/normal = SubResource("StyleBoxFlat_ofhvd")
text = "Start Game"

[node name="TutorialButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_3n68s")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxFlat_i8d61")
theme_override_styles/normal = SubResource("StyleBoxFlat_0ix1p")
text = "Tutorial"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_3n68s")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxFlat_2npeq")
theme_override_styles/normal = SubResource("StyleBoxFlat_2f4n5")
text = "Exit Game"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -33.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_3n68s")
theme_override_font_sizes/font_size = 30
text = "v1.0"
horizontal_alignment = 2

[node name="BGMMenu" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
script = ExtResource("4_rqou5")

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
